--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-index": "node src/generateIndex.js"
   },
   "dependencies": {
     "@nextui-org/pagination": "^2.0.35",
     "@radix-ui/react-icons": "^1.3.0",
+    "chokidar": "^3.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "fs": "0.0.1-security",
     "lucide-react": "^0.424.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
