--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-index": "node src/generateIndex.js"
+    "component:autoloading": "node src/generateIndex.js"
   },
   "dependencies": {
     "@nextui-org/pagination": "^2.0.35",
