--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
   },
   "dependencies": {
     "@nextui-org/pagination": "^2.0.35",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "bcryptjs": "^2.4.3",
     "chokidar": "^3.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.28",
     "fs": "0.0.1-security",
     "lucide-react": "^0.424.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
